MNT moving to Version 1.0.0.
Please see the changelog for details.

Squashed commit of the following:

commit 078b844650cd3ca3e66e6c23b9eb12cde7a42077
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 18:42:19 2017 +0100

    FIX version bump in setup.py

    This is just propagated from dev branch because of a bad commit to start with

    Squashed commit of the following:

    commit 2055d03df2430d39712c6ae6f15bdf3b495008a1
    Author: Brandon Malone <bmmalone@gmail.com>
    Date:   Sun Mar 12 18:40:09 2017 +0100

        FIX version bump in setup.py

commit 6b8d1b680832b1db2980dd671cec5447a5cf7b1e
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 18:35:46 2017 +0100

    MNT change __init__ to version 1.0.0

commit 6107d0d45d7ed85ca71330e552112378f6a85ea1
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 18:19:26 2017 +0100

    ADD bnsl.yaml as exmaple config file

commit 352305ccd27fdc2a13a1375136b96ef09adf69d6
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 18:14:09 2017 +0100

    UPD change log for next milestone

commit dd40f19a873bd451bd301eeb6a34154c5b9fc81f
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 17:43:36 2017 +0100

    ADD detailed command line option docs

    This addresses Issue #9.

commit db15b054bcd35693cfa1366610a19b273a32a527
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 16:57:54 2017 +0100

    ADD validate script to report algorithm selection performance

    This addresses Issue #6.

commit af5b73f5455677b64f2a9f3e4257d38623aaf5df
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 16:56:56 2017 +0100

    ADD autofolio as a requirement

    We use autofolio in the validate script

commit a65b4ef70f58e779c8b47e53edbdd656fa98803c
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12 15:09:15 2017 +0100

    ADD gitignore

commit 5b357fbc8414e0e6e2644dab3a03fb179069adc6
Author: Brandon Malone <bmmalone@gmail.com>
Date:   Sun Mar 12

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-git+https://bitbucket.org/bmmalone/misc.git#egg=misc
+numpy
+ConfigSpace
+scipy
+scikit-learn
+pandas
+xgboost
+
+smac
 git+https://github.com/mlindauer/ASlibScenario
-git+https://github.com/automl/auto-sklearn.git@development#egg=autosklearn
+sphinx_bootstrap_theme
+git+https://bitbucket.org/bmmalone/misc.git#egg=misc
+git+https://github.com/automl/auto-sklearn.git#egg=autosklearn
+git+https://github.com/mlindauer/AutoFolio.git#egg=autofolio
 .
