ADD new AS ensemble pipeline

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
+cython
 numpy
-ConfigSpace
-scipy
-scikit-learn
-pandas
-xgboost
-
-smac
-git+https://github.com/mlindauer/ASlibScenario
+Configspace
 sphinx_bootstrap_theme
-git+https://bitbucket.org/bmmalone/misc.git#egg=misc
-git+https://github.com/automl/auto-sklearn.git#egg=autosklearn
-git+https://github.com/mlindauer/AutoFolio.git#egg=autofolio
-.
+
+scikit-learn==0.18.1
+scipy==0.19.0
+pyrfr==0.4.0
+xgboost
+smac==0.5.0
+
+git+https://github.com/mlindauer/ASlibScenario
